4일차: 내장 객체 활용 실습

--- a/04/0718.md
+++ b/04/0718.md
@@ -249,3 +249,23 @@ const str = new String("Hello");
 - .pop()
 - .slice()
 - .sort()
+
+## 문자열 내장 객체
+
+- .split()
+- .charAt()
+- .concat()
+- .indexOf()
+
+## Math
+
+유틸리티 클래스<br>
+수학적인 상수와 함수를 위한 속성과 메서드를 가진 내장객체로, 함수 객체가 아니다.
+
+- max(), min()
+- random()
+- round()
+- floor()
+- ceil()
+- abs()
+- pow(x, y)
