--- a/04/0718.md
+++ b/04/0718.md
@@ -1,4 +1,4 @@
-## 복습
+# 복습
 
 **생성자 함수, 프로토타입**
 객체를 생성하는 함수
@@ -12,6 +12,8 @@
    - 인스턴스 내부의 `__proto__`속성으로 자신을 생성한 생성자 함수의 프로토 타입 객체를 참조하는 현상
 4. 프로토타입 체이닝
    - 연결된 프로토타입 객체를 타고 올라가서 원하는 객체를 찾아내는 현상
+
+# 클래스, 내장 객체
 
 ## 클래스
 
@@ -269,3 +271,278 @@ const str = new String("Hello");
 - ceil()
 - abs()
 - pow(x, y)
+
+# 동기, 비동기
+
+중요중요매우중요아주중요
+
+## 동기
+
+코드가 순차적으로 실행되는 것
+
+- 코드의 순서가 보장이 되는 것
+
+## 비동기
+
+코드가 순차적으로 실행되지 않는 것
+
+- 코드의 순서가 보장이 되지 않는 것
+
+> 자바스크립트는 싱글 스레드 언어(하나에 한번의 처리만 가능)
+> 그렇기 때문에 동기적으로 실행되는 언어이다.
+> 동기적 실행 언어의 단점은 한 번에 하나의 작업만 처리할 수 있기 때문에 모든 자바스크립트 내부의 코드가 동기적으로 처리가 된다면 일부 부하가 걸리는 작업을 모두 기다려 주어야 한다 -> 비효율적 <br><br> > **싱글 스레드 언어는 비동적으로 실행되는 코드가 필요하다.**
+
+## 콜백함수
+
+다른 함수의 매개 변수로 전달되어 그 함수가 실행되는 동안 특정 시점에 호출되는 함수
+
+1. 동기 콜백 함수
+
+   - 콜백 함수가 동기적으로 실행되는 형태
+
+   ```javascript
+   function greeting(callback) {
+     console.log("Hello");
+     callback();
+   }
+
+   function goodby() {
+     console.log("goodbye");
+   }
+
+   greeting(goodbye);
+   ```
+
+2. 비동기 콜백 함수
+
+   - 비동기 작업이 끝난 다음에 호출되는 형태
+
+   ```javascript
+   function task1(callback) {
+     setTimeout(() => {
+       console.log("task1 시작");
+       callback();
+     }, 1000);
+   }
+
+   function task2() {
+     console.log("task2 시작");
+   }
+
+   task1(task2);
+   ```
+
+### 콜백 지옥
+
+![alt text](image.png)
+
+- 코드의 가독성을 떨어트린다
+
+## Promise
+
+자바스크립트 비동기 작업을 처리하기 위한 객체
+
+- pending: 비동기 처리가 아직 수행되지 않은 상태
+- fulfilled: 비동기 처리가 수행된 상태
+- rejected: 비동기 처리가 실패한 상태
+- then, catch, finally로 결과값을 받는다.
+
+```javascript
+const promise = new Promise((resolve, reject)) =>{
+    //비동기 작업을 수행하는 코드
+    //작업이 성공하면 resolve(value) 호출
+    //작업이 실패하면 reject(error) 호출
+    console.log("doing something...");
+    resolve("sucess"); //fulfulled가 되면서 값이 들어감-뭐라도 일단 넘겨줘야됨
+    reject(); //안넘겨줘도 상광없음. 다만 사유를 넘기지 않는다면 에러 발생 원인을 모르겠지
+});
+
+promise
+.then((value) => console.log(value)) //fulfilled 상탱서 호출
+.catch((error) => console.error(error)) //reject 상태서 호출
+.finally(() => console.log("finally")); //resolve, reject 상관없이 무조건 실행
+```
+
+- 콜백이 즉시 실행된다.
+- then()에 reject, resolve 상태에 대해 두 개를 다 작성하면 catch()는 필요없을수돟
+
+```javascript
+const promise = new Promise((resolve, reject) => {
+  const isSuccess = true;
+  setTimeout(()=> {
+    isSuccess ? resolve("success") : reject(new Error("fail"));
+  },3000);
+});
+
+promise
+.then((value) => console.log(value))
+.catch((error) => console.error(error));
+.finally(() => console.log("finally"));
+
+console.log("hello");
+```
+
+**핵심!**
+
+- resolve-fulfilled, reject-reject
+- fulfilled-then, reject-catch, finally를 사용하여 처리
+
+```javascript
+const fetchNumber = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    resolve(1);
+  }, 1000);
+});
+
+fetchNumber //
+  //.then((num) => console.log(num));
+  .then((num) => num * 2) // 2 promise resolve(2);
+  .then((num) => num * 3) // 6 promise resolve(6);
+  .then((num) => num * 2) // 12 promise resolve(12);
+  .then((num) => console.log(num));
+```
+
+```javascript
+//promiseLike 반환
+fetchNumber //
+  .then((num) => {
+    return new Promise((resolve, reject) => {
+      resolve(num * 2);
+    });
+  }) //2 promise resolve(2)
+  .then((num) => num * 3)
+  .then((num) => num * 2)
+  .then((num) => console.log(num));
+```
+
+`-` -> 받긴 받았는데 코드에서 사용하지는 않는다는 관례적 표현
+`new Promise(( _ , reject) => {} )`
+
+### 콜백 지옥을 프로미스로 바꾸자
+
+1. 콜백을 다 지운다.
+
+```javascript
+function task1() {
+  return new Promise((resolve) => {
+    setTimeout(() => {
+      console.log("task1 시작");
+      resolve();
+    }, 1000);
+  });
+
+  function task2() {
+    return new Promise((resolve) => {
+      console.log("task2 시작");
+      resolve();
+    });
+  }
+
+  function task3() {
+    return new Promise((resolve) => {
+      console.log("task3 시작");
+      resolve();
+    });
+  }
+
+  function task4() {
+    return new Promise((resolve) => {
+      console.log("task4 시작");
+      resolve();
+    });
+  }
+}
+
+task1() //프로미스 내부적 반환,
+  .then(() => task2())
+  .then(() => task3())
+  .then(() => task4())
+  .then(() => console.log("모든 작업 종료"));
+```
+
+## async await
+
+- promise에 설탕 한꼬집
+
+```javascript
+const getSunIcon = async () => "sun(아이콘임)"; //무조건 resolve
+getSunIcon() //
+  .then((sun) => console.log(sun));
+```
+
+```javascript
+const getSunIcon() = async() => {
+  await delay(1000);
+  return "해(아이콘임)";
+};
+const getWaveIcon() = async() => {
+  await delay(1000);
+  return "해(아이콘임)";
+};
+
+const getCloudIcon() = async() => {
+  await delay(1000);
+  return "해(아이콘임)";
+};
+
+const getAllIcon = () => {
+  getSunIcon().then((sun) => {
+    return getWaveIceon().then((wave) =>{
+      return getCloudIcon().then((cloud) => {
+        console.log(`${sun} ${wave} ${cloud}`);
+      });
+    });
+  });
+};
+//resolve가 실행되기를 기다렸다가...기다렸다가...기다린다
+//이건 프로미스 지옥이야 이제
+//await를 사용하면 탈출할 수 있을지도(회개해)
+getAllIcon();
+```
+
+```javascript
+const getAllIcon = async () => {
+  const sun = await getSunIcon();
+  const wave = await getWaveIcon();
+  const cloud = await getCloudIcon();
+};
+```
+
+지옥 안가도 기다려준다.
+
+근데 한번에 와다다 쓰니 실행도 오래걸리고 조금? 조금 그래
+
+### Promise.all
+
+await들을 병렬 처리해버린다. <br>
+실행 시간들이 획기적으로 줄어든다(거이 5초차이)
+
+```javascript
+Promise.all([getSunIcon(), getWaveIcon(), getCloudIcon()]) //
+  .then((icons) => {
+    console.log(icons);
+    console.log(timeEnd);
+  });
+```
+
+아 `then`은 쓰기 시른데요! 그럼
+
+```javascript
+const icons = await Promise.all([getSunIcon(), getWaveIcon(), getCloudIcon()]);
+console.log(icons.join(", "));
+```
+
+이렇게 쓰세요
+
+이것도 단점이 있는데, 연결된 것 중 하나만 삐끗해도 다 같이 나락가는거야.
+
+`Promise.allSettled` -> 실패한 놈은 버리고 간다. 값은 객체 형태로 나온다.![alt text](image-1.png)
+
+```javascript
+console.log(
+  icons
+    .filter((icon) => icon.status === "fulfilled")
+    .map((icon) => icon.value)
+    .join(",")
+);
+```
