--- a/05/타입스크립트.md
+++ b/05/타입스크립트.md
@@ -27,6 +27,13 @@ Code Runner을 재설치해보기도 하였는데, 코드는 나타나지 않았
 `code-runner.excutorMap`도 직접 추가하지 않고 익스텐션 설정에서 `Edit in settings.json`을 클릭하여 추가하였다.
 <br>
 뭔가 엄청 긴 코드가 나오는데, 일단 타입스크립트 코드를 추가하고 실행해보니 오류 알림이 뜬다.
-`code-runner.default language`인풋란에 typescript를 입력했더니 오류가 나지 않는다
+코드 러너 글자 깨짐 발생
 <br>
 어렵다....
+<br>
+<br>
+패키지 글로벌 설치는 안좋다-
+
+```bash
+
+```
