--- a/05/타입스크립트.md
+++ b/05/타입스크립트.md
@@ -29,6 +29,9 @@ Code Runner을 재설치해보기도 하였는데, 코드는 나타나지 않았
 뭔가 엄청 긴 코드가 나오는데, 일단 타입스크립트 코드를 추가하고 실행해보니 오류 알림이 뜬다.
 코드 러너 글자 깨짐 발생
 <br>
+와 수강생분 중 짱짱 개발자님이 알려준대로 바꿨더니 정상 출력된다...감사해요 존경해요
+`"typescript": "node -r ts-node/register"`
+<br>
 어렵다....
 <br>
 <br>
